k0s-cluster01/longhorn/longhornIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/longhorn(/|$)(.*)" # This is the path that will be used to access the Longhorn UI
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
